--- a/en/css/style.css
+++ b/en/css/style.css
@@ -82,6 +82,34 @@ p{
     margin: auto;
 }
 
+.project{
+    left: 45%;
+    padding-left: 15px;
+    height: 40px;
+    width: 120px;
+    background: #212121;
+    text-align: center;
+    position: absolute;
+    z-index: 8;
+    display: flex;
+}
+
+.project a{
+    padding-top: 5px;
+    display: block;
+    color: #999;
+    font: 400 22px Oswald;
+}
+
+.project:hover a{
+    color: #fff;
+}
+
+.project:hover{
+    background: #546e7a;
+    color: #fff;
+}
+
 .proj1{
     /* Classe para projetos que ficam em exibição do lado esquerdo da tabela */
     margin: 0 150px;
@@ -118,4 +146,18 @@ p{
     margin-top:-50px;
     margin-left:-50px;
     margin-right: 50px;
+}
+
+.bradius{
+    /* deixa bordas arredondadas */
+    border-radius: 6px;
+    -webkit-border-radius: 6px;
+    -moz-border-radius: 6px;
+}
+
+/* Multiplos Eslilos */
+.project,.project:hover{
+    transition: all 0.5s linear;
+    -webkit-transition: all 0.5s linear;
+    -moz-transition: all 0.5s linear;
 }
