--- a/css/style.css
+++ b/css/style.css
@@ -8,8 +8,25 @@
     font-family: 'RobotoThin'
 }
 
-body{
-    font: 300 18px ;
+img {
     width: 100%;
     height: 100%;
+}
+
+.bg-black {
+    background-color: black;
+}
+
+.font-div {
+    width: 30%;
+}
+
+/* responsivity */
+@media(min-width: 1198px) {
+    .font-div {
+        padding: 42.5px 0px!important;
+    }
+    img {
+        height: 331px;
+    }
 }
