--- a/css/style.css
+++ b/css/style.css
@@ -13,6 +13,11 @@ img {
     height: 100%;
 }
 
+.img-profile {
+    width: 100%;
+    height: 100%;
+}
+
 .bg-black {
     background-color: black;
 }
@@ -26,7 +31,7 @@ img {
     .font-div {
         padding: 42.5px 0px!important;
     }
-    img {
+    .img-profile {
         height: 331px;
     }
 }
